# lowPowerFreeRtos

./: .cproject  .gitignore  .project  CMakeLists.txt  CodingStandards  Doxyfile  FreeRTOSConfig.h  Makefile  README.md  STM32L15xxB_rom.ld  config.h  config.h~  error.h  error.h~  info.txt  main.cpp  main.cpp~  overrides.cpp  overrides.cpp~  startup_ARMv7-M_E_.S  syscalls.c  vectors_STM32L1xx_md.c  vectors_STM32L1xx_md.c~
Drivers/CMSIS/Device/ST/STM32L1xx/: stm32l1xx.h  system_stm32l1xx.c
Drivers/CMSIS/Device/ST/STM32L1xx/Source/Templates/arm/: startup_stm32l151xb.s
Drivers/Custom/LIS35DE/: LIS35DE.cpp  LIS35DE.h
Drivers/Custom/M41T56C64/: M41T56C64.cpp  M41T56C64.h
Drivers/Custom/MCP980x/: MCP980x.cpp  MCP980x.h  MCP980x_drv_by_PG.h
Drivers/MMA955xL/: misc.h  mma955x_adapter.cpp  mma955x_adapter.h  mma955x_def.h  mma955x_drv.cpp  mma955x_drv.h
Drivers/ST/STM32_USB_Device_Library/Class/CDC/: usbd_conf.h  usbd_desc.cpp  usbd_desc.h
Drivers/STM32L1xx_HAL_Driver/: stm32l1xx_hal_adc.cpp  stm32l1xx_hal_adc.h  stm32l1xx_hal_adc_ex.cpp  stm32l1xx_hal_adc_ex.h  stm32l1xx_hal_comp_ex.h  stm32l1xx_hal_conf_template.h  stm32l1xx_hal_cortex.cpp  stm32l1xx_hal_cortex.h  stm32l1xx_hal_flash.cpp  stm32l1xx_hal_flash.h  stm32l1xx_hal_flash_ex.cpp  stm32l1xx_hal_flash_ex.h  stm32l1xx_hal_flash_ramfunc.cpp  stm32l1xx_hal_flash_ramfunc.h  stm32l1xx_hal_msp_template.cpp  stm32l1xx_hal_pcd.h  stm32l1xx_hal_pwr.h  stm32l1xx_hal_spi.cpp
Drivers/Telegesis/ETRX/: etrx2.cpp  etrx2.hpp  etrx2_cli.cpp  etrx2_cli.hpp  etrx2_event.cpp  etrx2_event.hpp  etrx2_parser.cpp  etrx2_parser.hpp
FatFS/: ffconf.h  mmc.cpp  syscall.c
FreeRTOS/: tasks.c
FreeRTOS/portable/GCC/ARM_CM3/: port.c  portmacro.h
FreeRTOS/portable/MemMang/: heap_3.c
Inc/: stm32l1xx_hal_conf.h  stm32l1xx_it.h  usb_device.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/: usb_device.h  usbd_conf.cpp
Middlewares/ST/STM32_USB_Device_Library/Core/: usbd_conf_template.cpp
Src/: config.h  main.cpp  main.h  printf-stdarg.c  rcc.cpp  stm32l1xx_hal_msp.cpp  stm32l1xx_it.cpp  usb_device.cpp  usbd_conf.cpp  vectors_STM32L1xx_md.c
application/: SD_test.cpp  SD_test.h  app.cpp  app.h  app_messages.h  button.cpp  button.h  command.cpp  command.hpp  data_consumer.cpp  data_consumer.hpp  data_producer.cpp  data_producer.hpp  lcdprinter.cpp  lcdprinter.h  service.cpp  service.h  termometr.cpp  termometr.h
configuration/: .main.cpp.swp  FreeRTOSConfig.h  bsp.h  comm-cmd.h  command.cpp  command.h  config.h  error.h  io_syscalls.c  io_syscalls.h  main.cpp  power_management.h  printf-stdarg.cpp  pwr_mng_impl.cpp  rcc.cpp  stm32l1xx_hal_conf.h  stm32l1xx_hal_msp.cpp  stm32l1xx_it.cpp  sys_fd.c  sys_fd.h  syscalls.c  task_communication.h
debug/: gdb (flash) + load.launch  gdb (flash).launch  openocd-x64-0.6.0-rc2 + stm32ldiscovery.launch
doc/html/: _free_r_t_o_s_8h_source.html  _free_r_t_o_s_config_8h_source.html  _stack_macros_8h_source.html  annotated.html  classes.html  command_8cpp.html  command_8cpp__incl.map  command_8cpp__incl.md5  command_8cpp_a126fa5abf8bd476d16c268085984edf2_icgraph.md5  command_8cpp_ad0131fa21a4a020793580a332b70e7fc_icgraph.map  command_8h.html  command_8h__dep__incl.map  command_8h__dep__incl.md5  command_8h__incl.map  command_8h__incl.md5  command_8h_a126fa5abf8bd476d16c268085984edf2_icgraph.map  command_8h_ad0131fa21a4a020793580a332b70e7fc_icgraph.md5  command_8h_source.html  config_8h.html  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.map  config_8h__incl.md5  config_8h_source.html  core__cm3_8h.html  core__cm3_8h__dep__incl.md5  core__cm3_8h__incl.map  core__cm3_8h__incl.md5  core__cm3_8h_source.html  core__cm_func_8h.html  core__cm_func_8h__dep__incl.map  core__cm_func_8h__dep__incl.md5  core__cm_func_8h_source.html  core__cm_instr_8h.html  core__cm_instr_8h__dep__incl.md5  core__cm_instr_8h_source.html  croutine_8h_source.html  diskio_8h_source.html  error_8h.html  error_8h__dep__incl.map  (+412 more)
drivers/: FC30.cpp  FC30.h  acc.cpp  acc.h  acc_def.h  ble112.c  ble112.h  driver.cpp  driver.h
drivers/ADXL343/: ADXL343.cpp  ADXL343.h
drivers/LIS35DE/: LIS35DE.cpp  LIS35DE.h
drivers/M41T56C64/: M41T56C64.cpp  M41T56C64.h
drivers/MCP980x/: MCP980x.cpp  MCP980x.h  MCP980x_T.cpp  MCP980x_T.h  MCP980x_drv_by_PG.cpp
drivers/SD/: SD.cpp  SD.h
hdr/: hdr_bitband.h  hdr_dma.h  hdr_dma.h~  hdr_gpio.h  hdr_gpio.h~  hdr_i2c.h  hdr_i2c.h~  hdr_rcc.h  hdr_rcc.h~  hdr_special_registers.h  hdr_spi.h  hdr_spi.h~  hdr_usart.h  hdr_usart.h~
peripherals/: command.cpp  command.cpp~  command.h  command.h~  exti.cpp  exti.h  flash.cpp  flash.h  gpio.cpp  gpio.h  helper.cpp  helper.cpp~  helper.h  helper.h~  i2c.cpp  i2c.h  i2c.h~  i2c_T.cpp  i2c_T.h  i2c_by_PG.cpp  i2c_by_PG.h  lcd.cpp  lcd.h  nvic.cpp  nvic.h  pwr.cpp  pwr.h  rcc.cpp  rcc.cpp~  rcc.h  rcc.h~  rtc.cpp  rtc.h  serial.cpp  serial.h  spi.cpp  spi.cpp~  spi.h  spi.h~  spi_dma.cpp  (+14 more)
