cmake_minimum_required(VERSION 2.8.4)
project(lowPowerFreeRtos)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    configuration/config.h
    configuration/FreeRTOSConfig.h
    configuration/main.cpp
    configuration/printf-stdarg.cpp
    configuration/stm32l1xx_hal_conf.h
    configuration/stm32l1xx_hal_msp.cpp
    configuration/stm32l1xx_it.cpp
    configuration/stm32l1xx_it.h
    configuration/syscalls.c
    configuration/vectors_STM32L1xx_md.c
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l100xb.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l100xba.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l100xc.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l151xb.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l151xba.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l151xc.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l151xca.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l151xd.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l151xe.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l152xb.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l152xba.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l152xc.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l152xca.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l152xd.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l152xe.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l162xc.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l162xca.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l162xd.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l162xe.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/stm32l1xx.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Include/system_stm32l1xx.h
    Drivers/CMSIS/Device/ST/STM32L1xx/Source/Templates/system_stm32l1xx.c
    Drivers/CMSIS/Device/ST/STM32L1xx/stm32l152xb.h
    Drivers/CMSIS/Device/ST/STM32L1xx/stm32l1xx.h
    Drivers/CMSIS/Device/ST/STM32L1xx/system_stm32l1xx.c
    Drivers/CMSIS/Device/ST/STM32L1xx/system_stm32l1xx.h
    Drivers/CMSIS/DSP_Lib/Examples/arm_class_marks_example/arm_class_marks_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_convolution_example/arm_convolution_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_dotproduct_example/arm_dotproduct_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_fft_bin_example/arm_fft_bin_data.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_fft_bin_example/arm_fft_bin_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_fir_example/arm_fir_data.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_fir_example/arm_fir_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_graphic_equalizer_example/arm_graphic_equalizer_data.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_graphic_equalizer_example/arm_graphic_equalizer_example_q31.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_linear_interp_example/arm_linear_interp_data.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_linear_interp_example/arm_linear_interp_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_matrix_example/arm_matrix_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_signal_converge_example/arm_signal_converge_data.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_signal_converge_example/arm_signal_converge_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_sin_cos_example/arm_sin_cos_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/arm_variance_example/arm_variance_example_f32.c
    Drivers/CMSIS/DSP_Lib/Examples/Common/Include/math_helper.h
    Drivers/CMSIS/DSP_Lib/Examples/Common/Source/math_helper.c
    Drivers/CMSIS/DSP_Lib/Examples/Common/system_ARMCM0.c
    Drivers/CMSIS/DSP_Lib/Examples/Common/system_ARMCM3.c
    Drivers/CMSIS/DSP_Lib/Examples/Common/system_ARMCM4.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_abs_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_add_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_dot_prod_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_mult_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_negate_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_offset_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_scale_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_shift_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_shift_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_shift_q7.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_f32.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_q15.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_q31.c
    Drivers/CMSIS/DSP_Lib/Source/BasicMathFunctions/arm_sub_q7.c
    Drivers/CMSIS/DSP_Lib/Source/CommonTables/arm_common_tables.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_conj_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_conj_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_conj_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_dot_prod_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_squared_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_real_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_real_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ComplexMathFunctions/arm_cmplx_mult_real_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_reset_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_reset_q15.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_pid_reset_q31.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_sin_cos_f32.c
    Drivers/CMSIS/DSP_Lib/Source/ControllerFunctions/arm_sin_cos_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_cos_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_cos_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_cos_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sin_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sin_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sin_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sqrt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FastMathFunctions/arm_sqrt_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df1_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df2T_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_biquad_cascade_df2T_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_fast_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_opt_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_fast_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_opt_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_partial_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_conv_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_fast_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_opt_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_opt_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_correlate_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_decimate_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_init_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_interpolate_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_lattice_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_init_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_fir_sparse_q7.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_iir_lattice_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_norm_q31.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_q15.c
    Drivers/CMSIS/DSP_Lib/Source/FilteringFunctions/arm_lms_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_add_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_add_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_add_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_inverse_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_fast_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_fast_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_mult_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_scale_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_scale_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_scale_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_sub_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_sub_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_sub_q31.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_trans_f32.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_trans_q15.c
    Drivers/CMSIS/DSP_Lib/Source/MatrixFunctions/arm_mat_trans_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_max_q7.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_mean_q7.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_min_q7.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_power_q7.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_rms_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_rms_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_rms_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_std_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_std_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_std_q31.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_var_f32.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_var_q15.c
    Drivers/CMSIS/DSP_Lib/Source/StatisticsFunctions/arm_var_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_f32.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_copy_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_f32.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_fill_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_float_to_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_float_to_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_float_to_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q15_to_float.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q15_to_q31.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q15_to_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q31_to_float.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q31_to_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q31_to_q7.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q7_to_float.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q7_to_q15.c
    Drivers/CMSIS/DSP_Lib/Source/SupportFunctions/arm_q7_to_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_bitreversal.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix2_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix4_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_cfft_radix8_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_dct4_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_fast_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_fast_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_init_f32.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_init_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_init_q31.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_q15.c
    Drivers/CMSIS/DSP_Lib/Source/TransformFunctions/arm_rfft_q31.c
    Drivers/CMSIS/Include/arm_common_tables.h
    Drivers/CMSIS/Include/arm_const_structs.h
    Drivers/CMSIS/Include/arm_math.h
    Drivers/CMSIS/Include/core_cm3.h
    Drivers/CMSIS/Include/core_cmFunc.h
    Drivers/CMSIS/Include/core_cmInstr.h
    Drivers/CMSIS/Include/core_sc000.h
    Drivers/CMSIS/Include/core_sc300.h
    Drivers/CMSIS/RTOS/cmsis_os.h
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usb_device.cpp
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usb_device.h
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usbd_cdc.cpp
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usbd_cdc.h
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usbd_cdc_if.cpp
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usbd_cdc_if.h
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usbd_conf.cpp
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usbd_conf.h
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usbd_desc.cpp
    Drivers/ST/STM32_USB_Device_Library/Class/CDC/usbd_desc.h
    Drivers/ST/STM32_USB_Device_Library/Core/usbd_core.cpp
    Drivers/ST/STM32_USB_Device_Library/Core/usbd_core.h
    Drivers/ST/STM32_USB_Device_Library/Core/usbd_ctlreq.cpp
    Drivers/ST/STM32_USB_Device_Library/Core/usbd_ctlreq.h
    Drivers/ST/STM32_USB_Device_Library/Core/usbd_def.h
    Drivers/ST/STM32_USB_Device_Library/Core/usbd_ioreq.cpp
    Drivers/ST/STM32_USB_Device_Library/Core/usbd_ioreq.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_adc.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_adc.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_adc_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_adc_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_comp.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_comp.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_comp_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_conf_template.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_cortex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_cortex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_crc.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_crc.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_cryp.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_cryp.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_cryp_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_cryp_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_dac.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_dac.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_dac_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_dac_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_def.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_dma.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_dma.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_dma_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_flash.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_flash.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_flash_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_flash_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_flash_ramfunc.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_flash_ramfunc.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_gpio.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_gpio.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_gpio_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_i2c.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_i2c.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_i2s.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_i2s.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_irda.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_irda.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_iwdg.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_iwdg.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_lcd.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_lcd.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_nor.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_nor.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_opamp.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_opamp.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_opamp_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_opamp_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pcd.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pcd.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pcd_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pcd_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rtc.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rtc.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rtc_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rtc_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_sd.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_sd.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_smartcard.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_smartcard.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_spi.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_spi.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_spi_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_spi_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_sram.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_sram.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_tim.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_tim.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_tim_ex.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_tim_ex.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_uart.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_uart.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_usart.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_usart.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_wwdg.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_wwdg.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_ll_fsmc.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_ll_fsmc.h
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_ll_sdmmc.cpp
    Drivers/STM32L1xx_HAL_Driver/stm32l1xx_ll_sdmmc.h
    FreeRTOS/include/croutine.h
    FreeRTOS/include/FreeRTOS.h
    FreeRTOS/include/list.h
    FreeRTOS/include/mpu_wrappers.h
    FreeRTOS/include/portable.h
    FreeRTOS/include/projdefs.h
    FreeRTOS/include/queue.h
    FreeRTOS/include/semphr.h
    FreeRTOS/include/StackMacros.h
    FreeRTOS/include/task.h
    FreeRTOS/include/timers.h
    FreeRTOS/portable/GCC/ARM_CM3/port.c
    FreeRTOS/portable/GCC/ARM_CM3/portmacro.h
    FreeRTOS/portable/MemMang/heap_3.c
    FreeRTOS/croutine.c
    FreeRTOS/list.c
    FreeRTOS/queue.c
    FreeRTOS/tasks.c
    FreeRTOS/timers.c
    hdr/hdr_bitband.h
    hdr/hdr_dma.h
    hdr/hdr_gpio.h
    hdr/hdr_i2c.h
    hdr/hdr_rcc.h
    hdr/hdr_special_registers.h
    hdr/hdr_spi.h
    hdr/hdr_usart.h
    peripherals/gpio.cpp
    peripherals/gpio.h
    peripherals/helper.cpp
    peripherals/helper.h
    peripherals/i2c.cpp
    peripherals/i2c.h
    peripherals/rcc.cpp
    peripherals/rcc.h
    peripherals/spi.cpp
    peripherals/spi.h
    peripherals/timer.cpp
    peripherals/timer.h)

add_executable(lowPowerFreeRtos ${SOURCE_FILES})